--- a/index.html
+++ b/index.html
@@ -1,23 +1,63 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Game Score Tracker</title>
+<title>Tracciamento Punteggi Natalizi</title>
 <style>
-  body { font-family: Arial, sans-serif; text-align: center; padding: 20px; }
-  .container { max-width: 600px; margin: auto; }
-  .player { margin: 20px; }
-  .player input { margin: 5px; }
+  body {
+    background: linear-gradient(to right, #ff9999, #99ff99); /* Gradiente Rosso-Verde pastello */
+    color: #333;
+    font-family: 'Roboto', sans-serif; /* Font moderno e leggibile */
+    text-align: center;
+    padding: 20px;
+  }
+  .container {
+    max-width: 600px;
+    margin: auto;
+  }
+  .header {
+    background: #ffcccc; /* Rosso pastello */
+    color: white;
+    padding: 20px;
+    margin-bottom: 30px;
+  }
+  .player {
+    margin: 20px;
+    padding: 20px;
+    background: #ccffcc; /* Verde pastello */
+    border-radius: 10px;
+  }
+  .player input, .player button {
+    margin: 5px;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+  }
+  .button {
+    background: #ccffcc; /* Verde pastello */
+    border: 2px solid #ffd700; /* Bordo dorato */
+    color: #333;
+  }
+  .score-section {
+    background: #ffffff; /* Sfondo bianco */
+    padding: 20px;
+    margin-top: 30px;
+    border-radius: 10px;
+  }
 </style>
 </head>
 <body>
 <div class="container">
-  <h1>Game Night Score Tracker</h1>
+  <div class="header">
+    <h1>Tracciamento Punteggi Natalizi</h1>
+  </div>
   <div id="players"></div>
-  <button onclick="addPlayer()">Add Player</button>
-  <h2>Scores:</h2>
-  <div id="scores"></div>
+  <button onclick="addPlayer()" class="button">Aggiungi Giocatore</button>
+  <div class="score-section" id="scores">
+    <h2>Riepilogo Punteggi:</h2>
+    <!-- I dettagli dei punteggi verranno aggiunti qui -->
+  </div>
 </div>
 <script>
 let playerCount = 0;
@@ -27,19 +67,19 @@ function addPlayer() {
   let playerDiv = document.createElement('div');
   playerDiv.className = 'player';
   playerDiv.innerHTML = `
-    <h3>Player ${playerCount}</h3>
-    <input type="text" id="name${playerCount}" placeholder="Name">
-    <input type="number" id="score${playerCount}" placeholder="Tokens" value="0">
-    <button onclick="updateScore(${playerCount})">Update</button>
+    <h3>Giocatore ${playerCount}</h3>
+    <input type="text" id="name${playerCount}" placeholder="Nome">
+    <input type="number" id="score${playerCount}" placeholder="Gettoni" value="0">
+    <button onclick="updateScore(${playerCount})" class="button">Aggiorna</button>
   `;
   document.getElementById('players').appendChild(playerDiv);
 }
 
 function updateScore(playerId) {
-  let name = document.getElementById('name' + playerId).value || 'Player ' + playerId;
+  let name = document.getElementById('name' + playerId).value || 'Giocatore ' + playerId;
   let score = document.getElementById('score' + playerId).value;
   let scoresDiv = document.getElementById('scores');
-  scoresDiv.innerHTML += `<p>${name}: ${score} tokens</p>`;
+  scoresDiv.innerHTML += `<p>${name}: ${score} gettoni</p>`;
 }
 </script>
 </body>
